Добавить умную историю через LinkedHashMap